Two way Binding Update

--- a/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<!-- I used Linear Layout because the design is very simple-->
+<!--Using Material it support by google and it make design look great-->
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,6 +11,10 @@
         <variable
             name="shoe"
             type="com.hanaahany.shoestoreapp.modle.ShoeDataList" />
+
+        <variable
+            name="vm"
+            type="com.hanaahany.shoestoreapp.ui.fragment.shoelist.ShoeListViewModel" />
     </data>
 
     <LinearLayout
