--- a/app/src/main/res/layout/fragment_instruction.xml
+++ b/app/src/main/res/layout/fragment_instruction.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- I used Constraint Layout to control design easy-->
+<!--Used Scroll View To scroll all list-->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
